multi site prob

--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -1,5 +1,5 @@
-<h1 class="text-6xl mb-12 text-center italic uppercase font-light tracking-widest antialiased">{{ title }}</h1>
+<h1 class="text-4xl mb-12 text-center italic font-light tracking-widest antialiased">{{ title }}</h1>
 
 {{ content_blocks }}
-    {{ partial :src="type" }}
+{{ partial :src="type" }}
 {{ /content_blocks }}
